# motor-like-arduino

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: dual_motor.py  keyboard_control.py  single_motor.py  tank_drive.py
motor-like-arduino/: __init__.py  board.py  exceptions.py  motor.py
src/motor_like_arduino/: __init__.py  board.py  exceptions.py  motor.py
